--- a/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
+++ b/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
@@ -39,6 +39,11 @@
     padding: $-collapse-header-padding;
     overflow: hidden;
     user-select: none;
+
+    @include when(expanded) {
+      @include halfPixelBorder('bottom');
+    }
+    
   }
 
   @include e(title) {
